--- a/css/estilos.css
+++ b/css/estilos.css
@@ -9,6 +9,8 @@ body{
     height: 50px;
     width: 50px;
     margin-right: 2em;
+    filter: drop-shadow( 3px 3px 3px black);
+
 }
 
 header nav ul li{
@@ -16,6 +18,7 @@ header nav ul li{
     padding: 10px;
     margin: 15px;
     border-radius: 25px;
+    z-index: 2;
 }
 
 .menu{
@@ -27,7 +30,7 @@ header{
 }
 
 h1{
-font-size: 1.5em;
+font-size: 1.0em;
 }
 
 nav{
@@ -50,4 +53,46 @@ nav{
 
 .paginas{
     justify-content: end;
+    background-color: rgba(49, 58, 89, 0.932) !important;
+    z-index: 2;
+
+}
+
+@media screen and (min-width:320px){
+    /* Index */
+    main, .cuerpo, .alan-walker-info-{
+        margin: 0.5em;
+    }
+
+    h2{
+        filter: drop-shadow( 3px 0px 7px black);
+    }
+
+    .cuerpo-parrafo-dos{
+        display: none;
+    }
+    .alan-walker-info img{
+        filter: drop-shadow( 7px 7px 7px black);
+        width: 100%;
+    }
+
+    .alan-walker-info p{
+        font-weight: bold;
+        text-align: center;
+    }
+
+    .pie-pagina{
+        background-color:#313A59;  
+        padding: 0.5em; 
+        color: black;
+    }
+
+    .pie-pagina-derechos{
+        margin-bottom: 0px;
+    }
+
+    .redes-img{
+        width: 45px;
+        height: 40px;
+    }
 }
