--- a/css/estilos.css
+++ b/css/estilos.css
@@ -134,9 +134,6 @@ nav{
 }
 
 @media screen and (min-width:1024px){
-    body{
-        background-color: aqua;
-    }
     /* Menu hover */
     header nav ul li:hover{
         background-color: #7074a3;
@@ -144,6 +141,57 @@ nav{
         transform: scale(0.9);
     }
     
-    /* Cuerpo */
+    /* estilos del contenedor */
+    /* estilos de los hijos del contendor */
+
+    .contenedor{
+        display: grid;
+        grid-template-columns: 1.5fr 1fr;
+        grid-template-rows: ;
+        gap: 1em;
+
+        grid-template-areas: 
+            "main main"
+            "cuerpo-informacion alan-walker-info"
+            "cuerpo-informacion alan-walker-info"
+            "footer footer";
+    }
+
+    main{
+        grid-area: main;
+    }
+
+    .cuerpo-informacion{
+        grid-area: cuerpo-informacion;
+        margin-left: 1em;
+    }
+
+    .alan-walker-info{
+        grid-area: alan-walker-info;
+    }
+
+    .cuerpo-parrafo-dos{
+        display: grid;
+    }
+
+    .pie-pagina{
+        display: grid;
+        grid-template-columns: 1.5fr 1fr;
+        grid-template-rows: 1;
+
+        grid-template-areas:
+        "pie-pagina-contenedor redes";
+    }
+    .pie-pagina-contenedor{
+        grid-area: pie-pagina-contenedor;
+    } 
     
+    .redes{
+        grid-area: area;
+    }
+
+    footer{
+        grid-area: footer;
+    }
+
 }
