indesx para escritorio 1.1

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -147,7 +147,7 @@ nav{
     .contenedor{
         display: grid;
         grid-template-columns: 1.5fr 1fr;
-        grid-template-rows: ;
+        grid-template-rows: 1fr;
         gap: 1em;
 
         grid-template-areas: 
@@ -177,7 +177,7 @@ nav{
     .pie-pagina{
         display: grid;
         grid-template-columns: 1.5fr 1fr;
-        grid-template-rows: 1;
+        grid-template-rows: 1fr;
 
         grid-template-areas:
         "pie-pagina-contenedor redes";
@@ -185,7 +185,7 @@ nav{
     .pie-pagina-contenedor{
         grid-area: pie-pagina-contenedor;
     } 
-    
+
     .redes{
         grid-area: area;
     }
